[package]
name = "rpack"
version = "0.2.2"
authors = ["Andrew Graham-Yooll <andrewgy8@gmail.com>"]
description = "Packing algorithm implmentation"
license-file = "LICENSE.md"
homepage = "https://github.com/andrewgy8/rpack"
repository = "https://github.com/andrewgy8/rpack"
include = [
    "Cargo.toml",
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
]

[dependencies]
